--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl">
+<html lang="pl" class="text-[100%]">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -14,7 +14,7 @@
 
 {{> layout/header}}
 
-<main class="2xl:mt-[80px] flex-1">
+<main class="2xl:mt-[5rem] flex-1">
   {{{body}}}
 </main>
 
@@ -22,5 +22,6 @@
 {{> privacy-policy}}
 
 <script src="/scripts/flowbite.min.js"></script>
+<script src="/scripts/accesibility.js"></script>
 </body>
 </html>
