--- a/views/partials/home/main-hero.hbs
+++ b/views/partials/home/main-hero.hbs
@@ -1,8 +1,8 @@
-<div class="hero min-h-screen" style="background-image: url(/img/hero.jpg);">
+<div class="hero min-h-screen overflow-y-auto" style="background-image: url(/img/hero.jpg);">
   <div class="hero-overlay bg-opacity-20"></div>
-  <div class="hero-content text-center text-white">
+  <div class="hero-content text-center text-white break-words">
     <div class="max-w-md">
-      <h1 class="text-4xl lg:text-5xl font-bold">ZAPRASZAMY</h1>
+      <h1 class="hero-title break-words">ZAPRASZAMY</h1>
       <p class="py-6 text-xl">Lorem ipsum dolor sit amet!</p>
     </div>
   </div>
