--- a/views/partials/home/why-us.hbs
+++ b/views/partials/home/why-us.hbs
@@ -1,9 +1,9 @@
-<div class="hero min-h-screen bg-base-200">
+<div class="hero min-h-screen bg-base-200 overflow-y-auto">
   <div class="hero-content flex-col-reverse lg:flex-row-reverse">
-    <img src="/img/home.jpg" alt="zdjęcie promocyjne" class="max-w-[20rem] rounded-full shadow-lg" />
+    <img src="/img/home.jpg" alt="zdjęcie promocyjne" class="max-w-screen lg:max-w-[20rem] rounded-full shadow-lg" />
     <div>
-      <h1 class="text-5xl font-bold">Dlaczego my?</h1>
-      <p class="py-6 pr-6 text-justify lg:text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
+      <h1 class="hero-title">Dlaczego my?</h1>
+      <p class="py-6 pr-6 text-justify lg:text-left max-w-screen break-words">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
         culpa
         dignissimos
         distinctio dolorem
