--- a/src/style/input.css
+++ b/src/style/input.css
@@ -7,7 +7,11 @@
 }
 
 .post-title {
-    @apply text-3xl md:text-3xl lg:text-4xl text-center font-bold text-secondary-focus pt-8 px-4
+    @apply text-2xl md:text-3xl lg:text-4xl text-center font-bold text-secondary-focus pt-8 px-4
+}
+
+.hero-title {
+    @apply text-4xl lg:text-5xl font-bold
 }
 
 .mobile-menu-item {
