--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -7,7 +7,7 @@
 
     <div class="flex items-center {{#if userLoggedIn}}xl:order-2{{/if}}">
       {{> layout/user-menu}}
-
+      {{> layout/accessibility}}
       <button data-collapse-toggle="mobile-menu-2" type="button"
               class="inline-flex items-center btn btn-ghost avatar xl:hidden p-1"
               aria-controls="mobile-menu-2" aria-expanded="false">
