Added the ability to save preferred font size in localstorage.

--- a/views/partials/layout/accessibility.hbs
+++ b/views/partials/layout/accessibility.hbs
@@ -1,3 +1,5 @@
-<button id="zoom-out-btn" class="h-5 w-5">{{> icons/zoom-out-svg}}</button>
-<button id="zoom-in-btn" class="h-5 w-5">{{> icons/zoom-in-svg}}</button>
-<button id="contrast-btn" class="h-5 w-5">{{> icons/contrast-svg}}</button>
+<button id="zoom-out-btn" class="h-5 w-5" title="Zmniejsz rozmiar tekstu">{{> icons/zoom-out-svg}}</button>
+<button id="zoom-in-btn" class="h-5 w-5" title="Zwiększ rozmiar tekstu">{{> icons/zoom-in-svg}}</button>
+<button id="contrast-btn" class="h-5 w-5" title="Wysoki kontrast">{{> icons/contrast-svg}}</button>
+
+<script src="/scripts/accesibility.js"></script>
