--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -433,41 +433,114 @@ html {
 }
 
 :root {
-  color-scheme: light;
+  --p: 183.03 47.368% 59.02%;
   --pf: 183.03 47.368% 47.216%;
   --sf: 338.25 71.429% 62.431%;
   --af: 39 84.112% 46.431%;
   --nf: 280 46.479% 11.137%;
-  --in: 198 93% 60%;
-  --su: 158 64% 52%;
-  --wa: 43 96% 56%;
-  --er: 0 91% 71%;
+  --b2: 24 33.333% 87.353%;
+  --b3: 24 33.333% 78.618%;
+  --bc: 24 11.111% 19.412%;
   --pc: 183.03 100% 11.804%;
   --sc: 338.25 100% 15.608%;
   --ac: 39 100% 11.608%;
   --nc: 280 82.688% 82.784%;
-  --inc: 198 100% 12%;
-  --suc: 158 100% 10%;
-  --wac: 43 100% 11%;
-  --erc: 0 100% 14%;
+  --inc: 0 0% 20%;
+  --suc: 157.83 100% 10.392%;
+  --wac: 42.778 100% 11.216%;
+  --erc: 0 100% 14.196%;
   --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
   --rounded-badge: 1.9rem;
   --animation-btn: 0.25s;
   --animation-input: .2s;
   --btn-text-case: uppercase;
   --btn-focus-scale: 0.95;
   --border-btn: 1px;
-  --p: 183.03 47.368% 59.02%;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
   --s: 338.25 71.429% 78.039%;
   --a: 39 84.112% 58.039%;
   --n: 280 46.479% 13.922%;
   --b1: 24 33.333% 97.059%;
-  --b2: 26.667 21.951% 91.961%;
-  --b3: 22.5 14.286% 89.02%;
-  --bc: 280 46.479% 13.922%;
-  --rounded-btn: 1.9rem;
-  --tab-border: 2px;
-  --tab-radius: .5rem;
+  --in: 0 0% 100%;
+  --su: 157.83 64.082% 51.961%;
+  --wa: 42.778 96.429% 56.078%;
+  --er: 0 90.541% 70.98%;
+}
+
+[data-theme=main] {
+  --p: 183.03 47.368% 59.02%;
+  --pf: 183.03 47.368% 47.216%;
+  --sf: 338.25 71.429% 62.431%;
+  --af: 39 84.112% 46.431%;
+  --nf: 280 46.479% 11.137%;
+  --b2: 24 33.333% 87.353%;
+  --b3: 24 33.333% 78.618%;
+  --bc: 24 11.111% 19.412%;
+  --pc: 183.03 100% 11.804%;
+  --sc: 338.25 100% 15.608%;
+  --ac: 39 100% 11.608%;
+  --nc: 280 82.688% 82.784%;
+  --inc: 0 0% 20%;
+  --suc: 157.83 100% 10.392%;
+  --wac: 42.778 100% 11.216%;
+  --erc: 0 100% 14.196%;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --animation-btn: 0.25s;
+  --animation-input: .2s;
+  --btn-text-case: uppercase;
+  --btn-focus-scale: 0.95;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --s: 338.25 71.429% 78.039%;
+  --a: 39 84.112% 58.039%;
+  --n: 280 46.479% 13.922%;
+  --b1: 24 33.333% 97.059%;
+  --in: 0 0% 100%;
+  --su: 157.83 64.082% 51.961%;
+  --wa: 42.778 96.429% 56.078%;
+  --er: 0 90.541% 70.98%;
+}
+
+[data-theme=highContrast] {
+  --p: 182.68 100% 21.961%;
+  --pf: 182.68 100% 17.569%;
+  --sf: 337.78 25.234% 33.569%;
+  --af: 220.91 39.286% 8.7843%;
+  --nf: 0 0% 69.647%;
+  --b2: 60 4.7619% 86.294%;
+  --b3: 60 4.7619% 77.665%;
+  --bc: 60 2.2495% 19.176%;
+  --pc: 182.68 100% 84.392%;
+  --sc: 337.78 100% 88.392%;
+  --ac: 220.91 53.304% 82.196%;
+  --nc: 0 0% 17.412%;
+  --inc: 0 81.757% 88.392%;
+  --suc: 148.91 100% 10.392%;
+  --wac: 42.03 100% 9.2157%;
+  --erc: 345 100% 93.176%;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --animation-btn: 0.25s;
+  --animation-input: .2s;
+  --btn-text-case: uppercase;
+  --btn-focus-scale: 0.95;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --s: 337.78 25.234% 41.961%;
+  --a: 220.91 39.286% 10.98%;
+  --n: 0 0% 87.059%;
+  --b1: 60 4.7619% 95.882%;
+  --in: 0 10.28% 41.961%;
+  --su: 148.91 78.776% 51.961%;
+  --wa: 42.03 83.83% 46.078%;
+  --er: 345 96.552% 65.882%;
 }
 
 *, ::before, ::after {
@@ -2415,20 +2488,6 @@ html {
   border-top-width: 4px;
 }
 
-.btn-sm {
-  height: 2rem;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  min-height: 2rem;
-  font-size: 0.875rem;
-}
-
-.btn-square:where(.btn-sm) {
-  height: 2rem;
-  width: 2rem;
-  padding: 0px;
-}
-
 .btn-circle:where(.btn-xs) {
   height: 1.5rem;
   width: 1.5rem;
@@ -2943,18 +3002,6 @@ html {
   width: 100%;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.max-w-\[20rem\] {
-  max-width: 20rem;
-}
-
 .max-w-\[50\%\] {
   max-width: 50%;
 }
@@ -3454,10 +3501,6 @@ html {
   padding-top: 2rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -3479,8 +3522,8 @@ html {
   line-height: 2rem;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
+.text-\[100\%\] {
+  font-size: 100%;
 }
 
 .text-base {
@@ -3501,22 +3544,6 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.text-\[100\%\] {
-  font-size: 100%;
-}
-
-.text-\[150\%\] {
-  font-size: 150%;
-}
-
-.text-\[200\%\] {
-  font-size: 200%;
 }
 
 .font-bold {
@@ -3580,6 +3607,11 @@ html {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.text-neutral {
+  --tw-text-opacity: 1;
+  color: hsl(var(--n) / var(--tw-text-opacity));
+}
+
 .text-primary-focus {
   --tw-text-opacity: 1;
   color: hsl(var(--pf, var(--p)) / var(--tw-text-opacity));
@@ -3593,6 +3625,11 @@ html {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-info {
+  --tw-text-opacity: 1;
+  color: hsl(var(--in) / var(--tw-text-opacity));
 }
 
 .underline {
@@ -5608,10 +5645,6 @@ html {
     padding-right: 0.5rem;
   }
 
-  .xl\:pb-10 {
-    padding-bottom: 2.5rem;
-  }
-
   .xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -5626,10 +5659,6 @@ html {
 @media (min-width: 1536px) {
   .\32xl\:fixed {
     position: fixed;
-  }
-
-  .\32xl\:mt-\[80px\] {
-    margin-top: 80px;
   }
 
   .\32xl\:mt-\[5rem\] {
