--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl" class="text-[100%]">
+<html lang="pl" class="text-[100%]" data-theme="main">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
