--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -1,5 +1,7 @@
-<header class="border-gray-200 dark:bg-gray-900 block 2xl:fixed top-0 w-full bg-base-100 z-20 shadow-lg border-y-2">
-  <nav class="flex flex-wrap items-center justify-between p-4">
+<header class="border-gray-200 dark:bg-gray-900 block 2xl:fixed top-0 w-full bg-base-100 z-20 shadow-lg border-y-2 p-4">
+  {{> layout/accessibility}}
+  <nav class="flex flex-wrap items-center justify-between ">
+
     <a href="/"
        class="sm:btn sm:btn-ghost sm:text-primary-focus font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-words pl-1 xl:px-2 2xl:px-4 {{#if
          userLoggedIn}}max-w-[70%]{{/if}} {{#unless userLoggedIn}}max-w-[80%]{{/unless}}">Publiczne
@@ -7,7 +9,7 @@
 
     <div class="flex items-center {{#if userLoggedIn}}xl:order-2{{/if}}">
       {{> layout/user-menu}}
-      {{> layout/accessibility}}
+
       <button data-collapse-toggle="mobile-menu-2" type="button"
               class="inline-flex items-center btn btn-ghost avatar xl:hidden p-1"
               aria-controls="mobile-menu-2" aria-expanded="false">
