--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -1,12 +1,10 @@
 <header class="border-gray-200 dark:bg-gray-900 block 2xl:fixed top-0 w-full bg-base-100 z-20 shadow-lg border-y-2 p-4">
-  {{> layout/accessibility}}
   <nav class="flex flex-wrap items-center justify-between ">
 
     <a href="/"
-       class="sm:btn sm:btn-ghost sm:text-primary-focus font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-words pl-1 xl:px-2 2xl:px-4 {{#if
+       class=" font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-words pl-1 xl:px-2 2xl:px-4 {{#if
          userLoggedIn}}max-w-[70%]{{/if}} {{#unless userLoggedIn}}max-w-[80%]{{/unless}}">Publiczne
       Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
-
     <div class="flex items-center {{#if userLoggedIn}}xl:order-2{{/if}}">
       {{> layout/user-menu}}
 
@@ -20,10 +18,12 @@
     </div>
     <div class="items-center justify-between hidden w-full xl:flex xl:w-auto xl:order-1" id="mobile-menu-2">
       <ul
-        class="flex flex-col font-medium p-4 xl:p-0 mt-4 border border-gray-100 rounded-lg xl:flex-row xl:mt-0 xl:border-0">
+        class="flex flex-col font-medium p-4 xl:p-0 mt-4 border border-gray-100 rounded-lg xl:flex-row xl:mt-0 xl:border-0 xl:items-center">
+        <li class="flex xl:block justify-center px-2 2xl:px-4  w-full xl:w-fit mx-auto xl:mx-0">
+          {{> layout/accessibility}}
+        </li>
         {{> layout/mobile-menu}}
         {{> layout/desktop-menu}}
-
         <li>
           <a class="main-menu-item"
              href="/o-przedszkolu"
