Improved display of dropdown with enlarged text.

--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -9,7 +9,7 @@
   </button>
 
   <div id="dropdownNavbar"
-       class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-52"
+       class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-52 h-fit max-h-[65vh] overflow-y-auto"
   >
     <ul class="py-2 text-sm" aria-labelledby="dropdownLargeButton">
       <li>
