--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2953,6 +2953,38 @@ html {
   height: 100vh;
 }
 
+.max-h-\[70\%\] {
+  max-height: 70%;
+}
+
+.max-h-\[50\%\] {
+  max-height: 50%;
+}
+
+.max-h-\[80\%\] {
+  max-height: 80%;
+}
+
+.max-h-\[60\%\] {
+  max-height: 60%;
+}
+
+.max-h-screen {
+  max-height: 100vh;
+}
+
+.max-h-\[60vh\] {
+  max-height: 60vh;
+}
+
+.max-h-\[70vh\] {
+  max-height: 70vh;
+}
+
+.max-h-\[65vh\] {
+  max-height: 65vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -3162,16 +3194,6 @@ html {
   gap: 2.5rem;
 }
 
-.gap-x-px {
-  -moz-column-gap: 1px;
-       column-gap: 1px;
-}
-
-.gap-x-\[5px\] {
-  -moz-column-gap: 5px;
-       column-gap: 5px;
-}
-
 .gap-x-\[10px\] {
   -moz-column-gap: 10px;
        column-gap: 10px;
@@ -3319,11 +3341,6 @@ html {
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
 }
 
-.bg-base-200 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b2, var(--b1)) / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -3437,6 +3454,16 @@ html {
   padding-right: 1.25rem;
 }
 
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -3470,16 +3497,6 @@ html {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
 }
 
 .pb-10 {
@@ -3640,6 +3657,11 @@ html {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.text-info {
+  --tw-text-opacity: 1;
+  color: hsl(var(--in) / var(--tw-text-opacity));
+}
+
 .text-neutral {
   --tw-text-opacity: 1;
   color: hsl(var(--n) / var(--tw-text-opacity));
@@ -3658,11 +3680,6 @@ html {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-info {
-  --tw-text-opacity: 1;
-  color: hsl(var(--in) / var(--tw-text-opacity));
 }
 
 .underline {
@@ -5133,232 +5150,6 @@ html {
   }
 }
 
-@media (min-width: 640px) {
-  .sm\:btn {
-    display: inline-flex;
-    flex-shrink: 0;
-    cursor: pointer;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-            user-select: none;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    border-color: transparent;
-    border-color: hsl(var(--n) / var(--tw-border-opacity));
-    text-align: center;
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-    transition-duration: 200ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    border-radius: var(--rounded-btn, 0.5rem);
-    height: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    line-height: 1em;
-    min-height: 3rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    text-transform: var(--btn-text-case, uppercase);
-    text-decoration-line: none;
-    border-width: var(--border-btn, 1px);
-    animation: button-pop var(--animation-btn, 0.25s) ease-out;
-    --tw-border-opacity: 1;
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--n) / var(--tw-bg-opacity));
-    --tw-text-opacity: 1;
-    color: hsl(var(--nc) / var(--tw-text-opacity));
-  }
-
-  .sm\:btn[disabled] {
-    pointer-events: none;
-  }
-
-  .sm\:btn.loading,.sm\:btn.loading:hover {
-    pointer-events: none;
-  }
-
-  .sm\:btn.loading:before {
-    margin-right: 0.5rem;
-    height: 1rem;
-    width: 1rem;
-    border-radius: 9999px;
-    border-width: 2px;
-    animation: spin 2s linear infinite;
-    content: "";
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-bottom-color: currentColor;
-    border-right-color: currentColor;
-  }
-
-  @media (prefers-reduced-motion: reduce) {
-    .sm\:btn.loading:before {
-      animation: spin 10s linear infinite;
-    }
-  }
-
-  .btn-group > input.sm\:btn[type="radio"] {
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-  }
-
-  .btn-group > input.sm\:btn[type="radio"]:before {
-    content: attr(data-title);
-  }
-
-  .sm\:btn:active:hover,.sm\:btn:active:focus {
-    animation: none;
-  }
-
-  .sm\:btn:not(.no-animation):active:hover,.sm\:btn:not(.no-animation):active:focus {
-    transform: scale(var(--btn-focus-scale, 0.95));
-  }
-
-  .sm\:btn:hover {
-    --tw-border-opacity: 1;
-    border-color: hsl(var(--nf, var(--n)) / var(--tw-border-opacity));
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--nf, var(--n)) / var(--tw-bg-opacity));
-  }
-
-  .sm\:btn:focus-visible {
-    outline: 2px solid hsl(var(--nf));
-    outline-offset: 2px;
-  }
-
-  .sm\:btn.glass:hover,.sm\:btn.glass.btn-active {
-    --glass-opacity: 25%;
-    --glass-border-opacity: 15%;
-  }
-
-  .sm\:btn.glass:focus-visible {
-    outline: 2px solid currentColor;
-  }
-
-  .sm\:btn-ghost {
-    border-width: 1px;
-    border-color: transparent;
-    background-color: transparent;
-    color: currentColor;
-  }
-
-  .sm\:btn-ghost:hover,.sm\:btn-ghost.btn-active {
-    --tw-border-opacity: 0;
-    background-color: hsl(var(--bc) / var(--tw-bg-opacity));
-    --tw-bg-opacity: 0.2;
-  }
-
-  .sm\:btn-ghost:focus-visible {
-    outline: 2px solid currentColor;
-  }
-
-  .sm\:btn[disabled],.sm\:btn[disabled]:hover {
-    --tw-border-opacity: 0;
-    background-color: hsl(var(--n) / var(--tw-bg-opacity));
-    --tw-bg-opacity: 0.2;
-    color: hsl(var(--bc) / var(--tw-text-opacity));
-    --tw-text-opacity: 0.2;
-  }
-
-  .sm\:btn.loading.btn-square:before,.sm\:btn.loading.btn-circle:before {
-    margin-right: 0px;
-  }
-
-  .sm\:btn.loading.btn-xl:before,.sm\:btn.loading.btn-lg:before {
-    height: 1.25rem;
-    width: 1.25rem;
-  }
-
-  .sm\:btn.loading.btn-sm:before,.sm\:btn.loading.btn-xs:before {
-    height: 0.75rem;
-    width: 0.75rem;
-  }
-
-  .btn-group > input.sm\:btn[type="radio"]:checked {
-    --tw-border-opacity: 1;
-    border-color: hsl(var(--p) / var(--tw-border-opacity));
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--p) / var(--tw-bg-opacity));
-    --tw-text-opacity: 1;
-    color: hsl(var(--pc) / var(--tw-text-opacity));
-  }
-
-  .btn-group > input.sm\:btn[type="radio"]:checked:focus-visible {
-    outline: 2px solid hsl(var(--p));
-  }
-
-  .drawer-toggle:focus-visible ~ .drawer-content .sm\:btn-ghost.drawer-button {
-    outline: 2px solid currentColor;
-  }
-
-  .btn-group .sm\:btn:not(:first-child):not(:last-child) {
-    border-start-start-radius: 0;
-    border-start-end-radius: 0;
-    border-end-start-radius: 0;
-    border-end-end-radius: 0;
-  }
-
-  .btn-group .sm\:btn:first-child:not(:last-child) {
-    margin-top: -0px;
-    margin-left: -1px;
-    border-start-start-radius: var(--rounded-btn, 0.5rem);
-    border-start-end-radius: 0;
-    border-end-start-radius: var(--rounded-btn, 0.5rem);
-    border-end-end-radius: 0;
-  }
-
-  .btn-group .sm\:btn:last-child:not(:first-child) {
-    border-start-start-radius: 0;
-    border-start-end-radius: var(--rounded-btn, 0.5rem);
-    border-end-start-radius: 0;
-    border-end-end-radius: var(--rounded-btn, 0.5rem);
-  }
-
-  .btn-group-horizontal .sm\:btn:not(:first-child):not(:last-child) {
-    border-start-start-radius: 0;
-    border-start-end-radius: 0;
-    border-end-start-radius: 0;
-    border-end-end-radius: 0;
-  }
-
-  .btn-group-horizontal .sm\:btn:first-child:not(:last-child) {
-    margin-top: -0px;
-    margin-left: -1px;
-    border-start-start-radius: var(--rounded-btn, 0.5rem);
-    border-start-end-radius: 0;
-    border-end-start-radius: var(--rounded-btn, 0.5rem);
-    border-end-end-radius: 0;
-  }
-
-  .btn-group-horizontal .sm\:btn:last-child:not(:first-child) {
-    border-start-start-radius: 0;
-    border-start-end-radius: var(--rounded-btn, 0.5rem);
-    border-end-start-radius: 0;
-    border-end-end-radius: var(--rounded-btn, 0.5rem);
-  }
-
-  .btn-group-vertical .sm\:btn:first-child:not(:last-child) {
-    margin-top: -1px;
-    margin-left: -0px;
-    border-start-start-radius: var(--rounded-btn, 0.5rem);
-    border-start-end-radius: var(--rounded-btn, 0.5rem);
-    border-end-start-radius: 0;
-    border-end-end-radius: 0;
-  }
-
-  .btn-group-vertical .sm\:btn:last-child:not(:first-child) {
-    border-start-start-radius: 0;
-    border-start-end-radius: 0;
-    border-end-start-radius: var(--rounded-btn, 0.5rem);
-    border-end-end-radius: var(--rounded-btn, 0.5rem);
-  }
-}
-
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -5559,11 +5350,6 @@ html {
 
   .sm\:p-2 {
     padding: 0.5rem;
-  }
-
-  .sm\:text-primary-focus {
-    --tw-text-opacity: 1;
-    color: hsl(var(--pf, var(--p)) / var(--tw-text-opacity));
   }
 }
 
