--- a/views/album/add.hbs
+++ b/views/album/add.hbs
@@ -1,7 +1,7 @@
 <div class="container-for-article">
 
   <header>
-    <h2 class="page-title">Dodaj nowy album</h2>
+    <h1 class="page-title">Dodaj nowy album</h1>
   </header>
 
   <form action="/album" method="POST" enctype="multipart/form-data">
@@ -27,7 +27,7 @@
 
         <input class="block text-input bg-white" required name="files" type="file"
                accept="image/jpeg, image/png, mage/heic, image/heif" multiple>
-        <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG,
+        <p class="mt-1 text-sm" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG,
           *PNG, *HEIC, *HEIF (MAX. 7MB/zdjęcie)</p>
       </label>
 
