--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -1,9 +1,9 @@
 <article class="container-for-article">
 
   {{#with news}}
-    <h2 class="post-title">{{this.title}}</h2>
+    <h1 class="post-title">{{this.title}}</h1>
 
-    <h3 class="text-center pb-10 pt-2">Data: {{this.createdAt}}</h3>
+    <p class="text-center pb-10 pt-2">Data: {{this.createdAt}}</p>
 
     {{#if ../userLoggedIn}}
       {{> edit-post this}}
