Added aria tags.

--- a/views/album/list-one.hbs
+++ b/views/album/list-one.hbs
@@ -21,7 +21,7 @@
             alt="Zdjęcie z albumu {{../this.title}}"
           >
 
-          <div class="p-4 hidden" id="photo-description">
+          <div class="p-4 hidden photo-description">
             <span class="title-span font-bold py-4 text-xl">{{../this.title}}</span>
             <span class="createdAt-span text-basic block">{{../this.createdAt}}</span>
           </div>
