--- a/views/partials/contact-details.hbs
+++ b/views/partials/contact-details.hbs
@@ -1,22 +1,22 @@
 <div class="pt-2 text-sm md:text-base xl:text-lg w-fit mx-auto">
   <div class="flex flex-col items-start">
     <div class="flex justify-center items-center font-semibold text-lg">
-      <span class="w-6 h-6 mr-4">{{> icons/office-svg}}</span> <span>Nazwa przedszkola</span>
+      <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/office-svg}}</span> <span>Nazwa przedszkola</span>
     </div>
     <p class="ml-10 mb-2">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju</p>
 
     <div class="flex justify-center items-center font-semibold text-lg">
-      <span class="w-6 h-6 mr-4">{{> icons/pin-svg}}</span> <span>Adres</span>
+      <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/pin-svg}}</span> <span>Adres</span>
     </div>
     <p class="ml-10 mb-2">ul. 1 Maja 3A, 44-330, Jastrzębie-Zdrój</p>
 
     <div class="flex justify-center items-center font-semibold text-lg">
-      <span class="w-6 h-6 mr-4">{{> icons/mail-svg}}</span> <span>Adres E-mail</span>
+      <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/mail-svg}}</span> <span>Adres E-mail</span>
     </div>
     <p class="ml-10 mb-2"><a href="mailto:poczta@pp23.jastrzebie.pl" class="hover:text-secondary-focus">poczta@pp23.jastrzebie.pl</a></p>
 
     <div class="flex justify-center items-center font-semibold text-lg">
-      <span class="w-6 h-6 mr-4">{{> icons/tel-svg}}</span> <span>Telefon</span>
+      <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/tel-svg}}</span> <span>Telefon</span>
     </div>
     <p class="ml-10 mb-2"><a href="tel:324762348" class="hover:text-secondary-focus">32 476 23 48</a></p>
   </div>
