--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -5,13 +5,13 @@
     class="flex items-center justify-between btn btn-ghost px-2 2xl:px-4"
   >
     Menu
-    <span class="w-6 h-6 ml-1">{{> icons/expand-svg}}</span>
+    <span class="w-6 h-6 ml-1" aria-hidden="true">{{> icons/expand-svg}}</span>
   </button>
 
   <div id="dropdownNavbar"
        class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-52 h-fit max-h-[65vh] overflow-y-auto"
   >
-    <ul class="py-2 text-sm" aria-labelledby="dropdownLargeButton">
+    <ul class="py-2 text-sm">
       <li>
         <a href="/" class="desktop-menu-item">Strona główna</a>
       </li>
