--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -1,4 +1,4 @@
-<header class="border-gray-200 dark:bg-gray-900 block 2xl:fixed top-0 w-full bg-base-100 z-20 shadow-lg border-y-2 p-4">
+<header class="border-gray-200 block 2xl:fixed top-0 w-full bg-base-100 z-20 shadow-lg border-y-2 p-4">
   <nav class="flex flex-wrap items-center justify-between ">
 
     <a href="/"
