--- a/views/partials/layout/mobile-menu.hbs
+++ b/views/partials/layout/mobile-menu.hbs
@@ -6,7 +6,7 @@
     data-collapse-toggle="mobile-dropdown"
   >
     <span class="flex-1 text-left whitespace-nowrap">Menu</span>
-    <span class="w-6 h-6">{{> icons/expand-svg}}</span>
+    <span class="w-6 h-6" aria-hidden="true">{{> icons/expand-svg}}</span>
   </button>
   <ul id="mobile-dropdown" class="hidden py-2 space-y-2">
     <li>
