Added fast theme loader. Removed menu animations.

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pl" class="text-[100%]" data-theme="main">
+<script src="/scripts/fast-theme-loader.js"></script>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
