--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -2,7 +2,7 @@
   <button
     id="dropdownNavbarLink"
     data-dropdown-toggle="dropdownNavbar"
-    class="flex items-center justify-between btn btn-ghost px-2 2xl:px-4"
+    class="flex items-center justify-between btn btn-ghost px-2 2xl:px-4 no-animation"
   >
     Menu
     <span class="w-6 h-6 ml-1" aria-hidden="true">{{> icons/expand-svg}}</span>
