--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2472,6 +2472,12 @@ html {
   border-radius: var(--rounded-box, 1rem);
 }
 
+.no-animation {
+  --btn-focus-scale: 1;
+  --animation-btn: 0;
+  --animation-input: 0;
+}
+
 .btm-nav-xs>*:where(.active) {
   border-top-width: 1px;
 }
@@ -2951,34 +2957,6 @@ html {
 
 .h-screen {
   height: 100vh;
-}
-
-.max-h-\[70\%\] {
-  max-height: 70%;
-}
-
-.max-h-\[50\%\] {
-  max-height: 50%;
-}
-
-.max-h-\[80\%\] {
-  max-height: 80%;
-}
-
-.max-h-\[60\%\] {
-  max-height: 60%;
-}
-
-.max-h-screen {
-  max-height: 100vh;
-}
-
-.max-h-\[60vh\] {
-  max-height: 60vh;
-}
-
-.max-h-\[70vh\] {
-  max-height: 70vh;
 }
 
 .max-h-\[65vh\] {
@@ -3866,6 +3844,9 @@ html {
 }
 
 .user-menu-item {
+  --btn-focus-scale: 1;
+  --animation-btn: 0;
+  --animation-input: 0;
   display: block;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -3881,6 +3862,9 @@ html {
 }
 
 .desktop-menu-item {
+  --btn-focus-scale: 1;
+  --animation-btn: 0;
+  --animation-input: 0;
   display: block;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -4053,6 +4037,12 @@ html {
 
 .drawer-toggle:focus-visible ~ .drawer-content .drawer-button.main-menu-item {
   outline: 2px solid currentColor;
+}
+
+.main-menu-item {
+  --btn-focus-scale: 1;
+  --animation-btn: 0;
+  --animation-input: 0;
 }
 
 .btn-group .main-menu-item:not(:first-child):not(:last-child) {
@@ -5277,11 +5267,6 @@ html {
 
   .dark\:bg-gray-800\/50 {
     background-color: rgb(31 41 55 / 0.5);
-  }
-
-  .dark\:bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 
   .dark\:bg-opacity-80 {
