--- a/src/style/input.css
+++ b/src/style/input.css
@@ -19,14 +19,14 @@
 }
 
 .user-menu-item {
-    @apply block px-4 py-2 text-sm hover:bg-gray-100
+    @apply block px-4 py-2 text-sm hover:bg-gray-100 no-animation
 }
 
 .desktop-menu-item {
-    @apply block px-4 py-2 hover:bg-gray-100
+    @apply block px-4 py-2 hover:bg-gray-100 no-animation
 }
 .main-menu-item {
-    @apply btn btn-ghost text-secondary-focus w-full xl:w-fit justify-start xl:justify-center px-2 2xl:px-4
+    @apply btn btn-ghost text-secondary-focus w-full xl:w-fit justify-start xl:justify-center px-2 2xl:px-4 no-animation
 }
 .small-title {
     @apply text-xl md:text-2xl lg:text-3xl text-center font-bold text-secondary-focus py-8 px-4
