Improved the display of the privacy policy info.

--- a/views/partials/privacy-policy.hbs
+++ b/views/partials/privacy-policy.hbs
@@ -1,6 +1,6 @@
 <div
   id="privacy-policy-container"
-  class="fixed right-0 left-0 bottom-0 border-t-2 bg-white shadow-xl py-4 px-2 xl:text-lg"
+  class="hidden fixed right-0 left-0 bottom-0 border-t-2 bg-white shadow-xl py-4 px-2 xl:text-lg"
 >
   <p class="block mx-auto items-center text-center pb-4 ">
     Ta strona korzysta z plików cookies zgodnie z <a
