--- a/views/partials/home/recent-news.hbs
+++ b/views/partials/home/recent-news.hbs
@@ -10,7 +10,7 @@
             <p
               class="py-4 pb-8 text-justify whitespace-pre-wrap break-words flex justify-center mb-auto">{{this.article}}{{#if
               this.isTooLong}}...{{/if}}</p>
-              <a class="btn btn-ghost border-white font-bold uppercase mt-auto w-fit" href="/aktualnosci/{{this.id}}">czytaj
+            <a class="btn btn-ghost border-white font-bold uppercase mt-auto w-fit" href="/aktualnosci/{{this.id}}"><span class="sr-only">Czytaj całość artykułu: {{this.title}}</span>czytaj
                 dalej</a>
           </div>
 
