--- a/views/error/error.hbs
+++ b/views/error/error.hbs
@@ -1,7 +1,7 @@
 <div class="container-for-article">
     <h2 class="page-title">Wystąpił błąd</h2>
 
-    <h3 class="small-title">{{message}}</h3>
+    <h3 class="small-title">{{error}}</h3>
 
     <div class="text-center text-lg font-bold hover:text-secondary-focus">{{>go-home}}</div>
 </div>
