--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -18,8 +18,9 @@
     </div>
     <div class="items-center justify-between hidden w-full xl:flex xl:w-auto xl:order-1" id="mobile-menu-2">
       <ul
-        class="flex flex-col font-medium p-4 xl:p-0 mt-4 border border-gray-100 rounded-lg xl:flex-row xl:mt-0 xl:border-0 xl:items-center">
-        <li class="flex xl:block justify-center px-2 2xl:px-4  w-full xl:w-fit mx-auto xl:mx-0">
+        class="flex flex-col font-medium p-4 xl:p-0 mt-4 border border-gray-100 rounded-lg xl:flex-row xl:mt-0 xl:border-0 xl:items-center"
+      >
+        <li class="flex xl:order-last xl:block justify-center px-2 2xl:px-4  w-full xl:w-fit mx-auto xl:mx-0">
           {{> layout/accessibility}}
         </li>
         {{> layout/mobile-menu}}
