Added navigation links section.

--- a/views/home/fees.hbs
+++ b/views/home/fees.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/oplaty" routeName="Opłaty"}}
+
     <h1 class="page-title">Opłaty</h1>
   </header>
 
