--- a/views/home/implemented-programs.hbs
+++ b/views/home/implemented-programs.hbs
@@ -1,31 +1,33 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/realizowane-programy-certyfikaty" routeName="Realizowane programy oraz certyfikaty"}}
+
     <h1 class="page-title">Realizowane programy oraz certyfikaty</h1>
-    <h2 class="small-title">Realizowane programy</h2>
   </header>
 
-  <div class="one-article">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
-      ullam vel?</p>
-  </div>
-</article>
 
-<article class="container-for-article">
-  <header>
-    <h2 class="small-title">Certyfikaty</h2>
-  </header>
+  <section class="one-article">
+    <header>
+      <h2 class="small-title">Realizowane programy</h2>
+    </header>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?</p>
+  </section>
 
-  <div class="one-article">
+  <section class="one-article">
+    <header>
+      <h2 class="small-title">Certyfikaty</h2>
+    </header>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
       distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
       ullam vel?
@@ -38,5 +40,5 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
       distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
       ullam vel?</p>
-  </div>
+  </section>
 </article>
