--- a/views/home/organization.hbs
+++ b/views/home/organization.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/organizacja-pracy" routeName="Organizacja pracy"}}
+
     <h1 class="page-title">Organizacja pracy</h1>
   </header>
 
