--- a/views/home/regulations.hbs
+++ b/views/home/regulations.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/regulamin-i-procedury" routeName="Regulamin i procedury"}}
+
     <h1 class="page-title">Regulamin i procedury</h1>
   </header>
 
