--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -701,6 +701,36 @@ html {
   justify-content: center;
 }
 
+.breadcrumbs {
+  max-width: 100%;
+  overflow-x: auto;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.breadcrumbs > ul,.breadcrumbs > ol {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  min-height: -moz-min-content;
+  min-height: min-content;
+}
+
+.breadcrumbs > ul > li, .breadcrumbs > ol > li {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbs > ul > li > a, .breadcrumbs > ol > li > a {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+}
+
+.breadcrumbs > ul > li > a:hover, .breadcrumbs > ol > li > a:hover {
+  text-decoration-line: underline;
+}
+
 .btn {
   display: inline-flex;
   flex-shrink: 0;
@@ -1525,6 +1555,36 @@ html {
 .btm-nav>* .label {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.breadcrumbs > ul > li > a:focus, .breadcrumbs > ol > li > a:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.breadcrumbs > ul > li > a:focus-visible, .breadcrumbs > ol > li > a:focus-visible {
+  outline: 2px solid currentColor;
+  outline-offset: 2px;
+}
+
+.breadcrumbs > ul > li + *:before, .breadcrumbs > ol > li + *:before {
+  content: "";
+  margin-left: 0.5rem;
+  margin-right: 0.75rem;
+  display: block;
+  height: 0.375rem;
+  width: 0.375rem;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0.4;
+  border-top: 1px solid;
+  border-right: 1px solid;
+  background-color: transparent;
+}
+
+[dir="rtl"] .breadcrumbs > ul > li + *:before,
+[dir="rtl"] .breadcrumbs > ol > li + *:before {
+  --tw-rotate: -135deg;
 }
 
 .btn:active:hover,
@@ -3417,11 +3477,6 @@ html {
   padding: 1.5rem;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -3480,11 +3535,6 @@ html {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .pb-10 {
@@ -3552,8 +3602,8 @@ html {
   line-height: 2rem;
 }
 
-.text-\[100\%\] {
-  font-size: 100%;
+.text-\[150\%\] {
+  font-size: 150%;
 }
 
 .text-base {
@@ -3574,14 +3624,6 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[150\%\] {
-  font-size: 150%;
-}
-
-.text-\[200\%\] {
-  font-size: 200%;
 }
 
 .font-bold {
@@ -3768,8 +3810,9 @@ html {
 
 .page-title {
   padding-bottom: 2.5rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  overflow-wrap: break-word;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   padding-top: 2rem;
   text-align: center;
   font-size: 1.5rem;
@@ -3777,6 +3820,13 @@ html {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: hsl(var(--sf, var(--s)) / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .page-title {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -3794,8 +3844,9 @@ html {
 }
 
 .post-title {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  overflow-wrap: break-word;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   padding-top: 2rem;
   text-align: center;
   font-size: 1.5rem;
@@ -3803,6 +3854,13 @@ html {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: hsl(var(--sf, var(--s)) / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .post-title {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -4176,14 +4234,16 @@ html {
   margin-top: 0px;
   margin-bottom: 2rem;
   overflow-wrap: break-word;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
   padding-top: 1rem;
 }
 
 @media (min-width: 768px) {
   .container-for-article {
     max-width: 1024px;
+    padding-left: 2rem;
+    padding-right: 2rem;
     padding-top: 2rem;
   }
 }
@@ -5351,6 +5411,14 @@ html {
 @media (min-width: 768px) {
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:overflow-x-auto {
+    overflow-x: auto;
   }
 
   .md\:border-transparent {
