--- a/views/home/about.hbs
+++ b/views/home/about.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/o-przedszkolu" routeName="O przedszkolu"}}
+
     <h1 class="page-title">O przedszkolu</h1>
   </header>
 
