--- a/views/home/contact.hbs
+++ b/views/home/contact.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/kontakt" routeName="Kontakt"}}
+
     <h1 class="page-title">Kontakt</h1>
   </header>
 
