--- a/views/home/employees.hbs
+++ b/views/home/employees.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/pracownicy-przedszkola" routeName="Pracownicy przedszkola"}}
+
     <h1 class="page-title">Pracownicy przedszkola</h1>
   </header>
 
