--- a/views/home/gdpr.hbs
+++ b/views/home/gdpr.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/ochrona-danych-osobowych" routeName="Ochrona danych osobowych"}}
+
     <h1 class="page-title">Ochrona danych osobowych</h1>
   </header>
 
