--- a/views/home/groups.hbs
+++ b/views/home/groups.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/grupy-w-przedszkolu" routeName="Grupy w przedszkolu"}}
+
     <h1 class="page-title">Grupy w przedszkolu</h1>
   </header>
 
