--- a/views/home/privacy-policy.hbs
+++ b/views/home/privacy-policy.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/polityka-prywatnosci" routeName="Polityka prywatności"}}
+
     <h1 class="page-title">Polityka prywatności</h1>
   </header>
 
