--- a/views/home/statute.hbs
+++ b/views/home/statute.hbs
@@ -1,5 +1,7 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/statut" routeName="Statut"}}
+
     <h1 class="page-title">Statut</h1>
   </header>
 
