Added navigation links section into news route.

--- a/views/news/add.hbs
+++ b/views/news/add.hbs
@@ -1,5 +1,13 @@
 <div class="container-for-article">
   <header>
+
+    {{> breadcrumbs
+      routeUrl="/aktualnosci"
+      routeName="Aktualności"
+      subpageUrl="dodaj"
+      subpageName="Dodaj nowy wpis"
+    }}
+
     <h1 class="page-title">Dodaj aktualność</h1>
   </header>
 
