--- a/views/news/list-all.hbs
+++ b/views/news/list-all.hbs
@@ -1,5 +1,6 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/aktualnosci/strona/1" routeName="Aktualności"}}
     <h1 class="page-title">Aktualności</h1>
   </header>
 
