Added navigation links section into album route.

--- a/views/album/list-all.hbs
+++ b/views/album/list-all.hbs
@@ -1,6 +1,8 @@
 <article class="container-for-article">
 
   <header>
+    {{> breadcrumbs routeUrl="/album/strona/1" routeName="Album fotograficzny"}}
+
     <h1 class="page-title">Album fotograficzny</h1>
   </header>
 
