--- a/views/album/add.hbs
+++ b/views/album/add.hbs
@@ -1,6 +1,14 @@
 <div class="container-for-article">
 
   <header>
+
+    {{> breadcrumbs
+      routeUrl="/album"
+      routeName="Album fotograficzny"
+      subpageUrl="dodaj"
+      subpageName="Dodaj nowy album"
+    }}
+
     <h1 class="page-title">Dodaj nowy album</h1>
   </header>
 
@@ -27,8 +35,8 @@
 
         <input class="block text-input bg-white" required name="files" type="file"
                accept="image/jpeg, image/png, mage/heic, image/heif" multiple>
-        <p class="mt-1 text-sm" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG,
-          *PNG, *HEIC, *HEIF (MAX. 7MB/zdjęcie)</p>
+        <span class="mt-1 text-sm" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG,
+          *PNG, *HEIC, *HEIF (MAX. 7MB/zdjęcie)</span>
       </label>
 
       <div class="text-center">
