Added more hover effects.

--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -23,7 +23,7 @@
   {{/with}}
 
   <div class="flex justify-center">
-    <a href="/aktualnosci" class="text-center semibold-link-with-hover pt-8">Powrót do aktualności</a>
+    <a href="/aktualnosci" class="text-center semibold-link-with-hover mt-8 hover:underline">Powrót do aktualności</a>
   </div>
 
 </article>
