--- a/views/partials/layout/accessibility.hbs
+++ b/views/partials/layout/accessibility.hbs
@@ -1,19 +1,19 @@
 <div class="flex gap-x-[10px] py-0.5">
 
-  <button data-tooltip-target="tooltip-zoom-out" id="zoom-out-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5">{{> icons/zoom-out-svg}}</button>
-  <div id="tooltip-zoom-out" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-secondary-focus">
+  <button data-tooltip-target="tooltip-zoom-out" id="zoom-out-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5 hover:border-[1px] hover:border-black">{{> icons/zoom-out-svg}}</button>
+  <div id="tooltip-zoom-out" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-black">
     <span class="p-2">Zmniejsz rozmiar tekstu</span>
     <div class="tooltip-arrow" data-popper-arrow></div>
   </div>
 
-  <button data-tooltip-target="tooltip-zoom-in" id="zoom-in-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5">{{> icons/zoom-in-svg}}</button>
-  <div id="tooltip-zoom-in" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-secondary-focus">
+  <button data-tooltip-target="tooltip-zoom-in" id="zoom-in-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5 hover:border-[1px] hover:border-black">{{> icons/zoom-in-svg}}</button>
+  <div id="tooltip-zoom-in" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-black">
     <span class="p-2">Zwiększ rozmiar tekstu</span>
     <div class="tooltip-arrow" data-popper-arrow></div>
   </div>
 
-  <button data-toggle-theme="main,highContrast" data-act-class="ACTIVECLASS" id="contrast-btn" data-tooltip-target="tooltip-contrast" id="zoom-in-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5">{{> icons/contrast-svg}}</button>
-  <div id="tooltip-contrast" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-secondary-focus">
+  <button data-toggle-theme="main,highContrast" data-act-class="ACTIVECLASS" id="contrast-btn" data-tooltip-target="tooltip-contrast" id="zoom-in-btn" data-tooltip-placement="bottom" type="button" class="h-5 w-5 hover:border-[1px] hover:border-black">{{> icons/contrast-svg}}</button>
+  <div id="tooltip-contrast" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium bg-base-100 rounded-lg shadow-sm opacity-0 tooltip border-2 border-black">
     <span class="p-2">Zmień kontrast</span>
     <div class="tooltip-arrow" data-popper-arrow></div>
   </div>
