--- a/views/partials/layout/footer.hbs
+++ b/views/partials/layout/footer.hbs
@@ -20,11 +20,9 @@
       <span class="w-4 h-4 mr-2" aria-hidden="true">{{> icons/mail-svg}}</span> <span class="sr-only">Email</span> <span>poczta@pp23.jastrzebie.pl</span></a>
     <a class="link link-hover flex items-center" href="tel:324762348">
       <span class="w-4 h-4 mr-2" aria-hidden="true">{{> icons/tel-svg}}</span> <span class="sr-only">Telefon</span> <span>32 476 23 48</span></a>
-    <a class="m-1 grayscale hover:grayscale-0"
+    <a class="m-1 grayscale hover:grayscale-0 font-semibold w-fit flex items-center hover:underline"
        href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
-      <div class="flex items-center font-semibold">
-        <span>Znajdź nas na</span> <img src="/img/f_logo_RGB-Blue_58.png" class="w-4 ml-2" alt="Facebook logo">
-      </div>
+        <span>Znajdź nas na</span> <img src="/img/f_logo_RGB-Blue_58.png" class="w-4 h-4 ml-2" alt="Facebook logo">
     </a>
   </div>
 
