--- a/views/partials/album/go-to-albums.hbs
+++ b/views/partials/album/go-to-albums.hbs
@@ -1,3 +1,3 @@
 <div class="flex justify-center">
-  <a href="/album/strona/1" class="text-center semibold-link-with-hover pt-4">Powrót do listy albumów</a>
+  <a href="/album/strona/1" class="text-center semibold-link-with-hover mt-4 hover:underline">Powrót do listy albumów</a>
 </div>
