--- a/views/partials/contact-details.hbs
+++ b/views/partials/contact-details.hbs
@@ -1,4 +1,4 @@
-<div class="pt-2 text-sm md:text-base xl:text-lg w-fit mx-auto">
+<section class="pt-2 text-sm md:text-base xl:text-lg w-fit mx-auto">
   <div class="flex flex-col items-start">
     <div class="flex justify-center items-center font-semibold text-lg">
       <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/office-svg}}</span> <span>Nazwa przedszkola</span>
@@ -13,17 +13,15 @@
     <div class="flex justify-center items-center font-semibold text-lg">
       <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/mail-svg}}</span> <span>Adres E-mail</span>
     </div>
-    <p class="ml-10 mb-2"><a href="mailto:poczta@pp23.jastrzebie.pl" class="hover:text-secondary-focus">poczta@pp23.jastrzebie.pl</a></p>
+    <p class="ml-10 mb-2"><a href="mailto:poczta@pp23.jastrzebie.pl" class="hover:text-secondary-focus hover:underline">poczta@pp23.jastrzebie.pl</a></p>
 
     <div class="flex justify-center items-center font-semibold text-lg">
       <span class="w-6 h-6 mr-4" aria-hidden="true">{{> icons/tel-svg}}</span> <span>Telefon</span>
     </div>
-    <p class="ml-10 mb-2"><a href="tel:324762348" class="hover:text-secondary-focus">32 476 23 48</a></p>
+    <p class="ml-10 mb-2"><a href="tel:324762348" class="hover:text-secondary-focus hover:underline">32 476 23 48</a></p>
   </div>
 
-    <a class="m-1 grayscale hover:grayscale-0" href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
-      <div class="flex justify-center items-center p-2 font-semibold text-lg">
+    <a class="m-1 grayscale hover:grayscale-0 hover:underline w-fit mx-auto flex justify-center items-center font-semibold text-lg hover:text-secondary-focus" href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
       <span>Znajdź nas na</span> <img src="/img/f_logo_RGB-Blue_58.png" class="w-6 ml-2" alt="Facebook logo">
-    </div>
     </a>
-</div>
+</section>
