--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -17,9 +17,9 @@
         {{> edit-post this}}
       {{/if}}
     </header>
-    <div class="text-xl whitespace-pre-wrap break-all flex justify-center text-justify">
+    <section class="text-xl whitespace-pre-wrap break-all flex justify-center">
       <span>{{this.article}}</span>
-    </div>
+    </section>
   {{/with}}
 
   <div class="flex justify-center">
