--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,5 +1,6 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/auth/login" routeName="Logowanie"}}
     <h1 class="page-title">Panel logowania</h1>
   </header>
 
