--- a/views/news/list-all.hbs
+++ b/views/news/list-all.hbs
@@ -19,10 +19,10 @@
       <div class="p-4">
         <h2 class="font-bold text-2xl">{{this.title}}</h2>
         <div class="text-base block">{{this.createdAt}}</div>
-        <div class="py-2 whitespace-pre-wrap">{{this.article}}{{#if this.isTooLong}}...<a class=" text-base font-bold text-secondary-focus uppercase" href="/aktualnosci/{{this.id}}"><span class="sr-only">Czytaj całość artykułu: {{this.title}}</span>czytaj dalej</a>{{/if}}</div>
+        <div class="py-2 whitespace-pre-wrap">{{this.article}}{{#if this.isTooLong}}...<a class=" text-base font-bold text-secondary-focus uppercase hover:underline" href="/aktualnosci/{{this.id}}"><span class="sr-only">Czytaj całość artykułu: {{this.title}}</span>czytaj całość artykułu</a>{{/if}}</div>
 
         <div class="text-base pt-2">
-          <a href="/aktualnosci/{{this.id}}" class="hover:text-secondary-focus hover:underline"><span class="sr-only">Czytaj całość artykułu: {{this.title}}</span> Czytaj całość artykułu</a>
+          <a href="/aktualnosci/{{this.id}}" class="hover:text-secondary-focus hover:underline"><span class="sr-only">Przejdź do artykułu: {{this.title}}</span>Przejdź do artykułu</a>
     {{#if ../userLoggedIn}}
           | <a href="/aktualnosci/{{this.id}}/edycja" class="text-secondary-focus hover:font-bold hover:underline">Edytuj wpis</a>
     {{/if}}
