--- a/views/user/dashboard.hbs
+++ b/views/user/dashboard.hbs
@@ -1,5 +1,6 @@
 <article class="container-for-article">
   <header>
+    {{> breadcrumbs routeUrl="/dashboard" routeName="Panel administracyjny"}}
     <h1 class="page-title">Panel administracyjny</h1>
   </header>
   <div class="actions-container">
